--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Docker CI
+name: Build-Publish
 
 on: 
   push:
@@ -8,9 +8,25 @@ on:
 
 jobs:
   build:
-    runs-on: python:3.8-alpine
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: docker build
-      run: |
-        docker build ./my_flask_app - t marmunc/flask_app:v0.1
+      -
+        name: Checkout 
+        uses: actions/checkout@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./my_flask_app
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/flask_app:v0.2
