--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,6 +27,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./my_flask_app
-          file: ./Dockerfile
+          file: ./app/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/flask_app:v0.2
